k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
  labels:
    hello: world
spec:
  replicas: 1
  selector:
    matchLabels:
      hello: world
  template:
    metadata:
      labels:
        hello: world
    spec:
      containers:
      - name: hello-world
        image: hello-world
        ports:
        - containerPort: 8080
          name: hello
      - name: sidecar
        image: sidecar
        ports:
        - containerPort: 80
          name: sidecar
