k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  labels:
    hello: world
spec:
  selector:
    hello: world
  ports:
  - port: 80
    targetPort: hello
    name: http
  - port: 8080
    targetPort: sidecar
    name: sidecar
