k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world
  labels:
    hello: world
  annotations:
    cert-manager.io/cluster-issuer: mkcert
spec:
  ingressClassName: nginx
  rules:
  - host: hello-world.kind.io
    http:
      paths:
        - path: /hello
          backend:
            service:
              name: hello-world
              port:
                name: http
          pathType: Exact
        - path: /
          backend:
            service:
              name: hello-world
              port:
                name: sidecar
          pathType: Prefix
  tls:
  - hosts:
    - hello-world.kind.io
    secretName: hello-world-tls
